header fixed, z-index 999

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,10 @@ navbar
 }
 
 /* 767px以下ではメニューを、左端に展開 */
+header {
+	position: fixed;
+	z-index: 999;
+}
 
 .navbar-header {
 	position: relative;
